CORE-42951: Membership info link display on header / my account tabs / home page.

--- a/docroot/modules/react/alshaya_hello_member/templates/hello-member-header-block.html.twig
+++ b/docroot/modules/react/alshaya_hello_member/templates/hello-member-header-block.html.twig
@@ -1,3 +1,3 @@
 <div class="membership-info-link">
-  <a class="info-link" href="{{ strings.value }}">Membership Info</a>
+  <a class="info-link" href="{{ strings.value }}">{{ 'Membership Info' | t }}</a>
 </div>
