CORE-42875: Aura Redesign - En | Ar Email matching_link your Aura from cart | alignment issue.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-forms/component/_aura-modal-form-layout.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-forms/component/_aura-modal-form-layout.scss
@@ -328,7 +328,6 @@
         .spc-aura-unlink-card-form-content {
           display: flex;
           align-items: flex-end;
-          justify-content: space-between;
           text-align: $left;
 
           @include breakpoint($only-mobile) {
@@ -363,6 +362,7 @@
               display: inline-block;
               font-size: rem(10);
               color: $aura-loyalty-dark-text;
+              padding-#{$left}: rem(22);
             }
           }
 
