CORE-43237: Fixed the Map Marker label positioning for list view.

--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/conditional-sass/store-finder/component/_store-finder.scss
@@ -546,6 +546,12 @@
   }
 }
 
+.geolocation-google-map {
+  [aria-hidden='true'] {
+    padding-top: rem(5);
+  }
+}
+
 .views-field-field-store-open-hours {
   .hours--wrapper .hours--label,
   .hours--wrapper .open--hours {
