--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/store-finder/component/_store-finder.scss
@@ -45,3 +45,12 @@
     font-weight: bold;
   }
 }
+
+.path--store-finder,
+.nodetype--store {
+  .geolocation-google-map {
+    [aria-hidden='true'] {
+      padding-bottom: 0;
+    }
+  }
+}
