--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level1.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level1.handlebars
@@ -1,8 +1,8 @@
 {{! @see docroot/modules/custom/alshaya_main_menu/templates/alshaya-main-menu-level1.html.twig }}
-<div class="main--menu" data-menu-timing="{{ settings.highlightTiming }}">
+<div class="main--menu" data-menu-timing="{{ highlight_timing }}">
   <div class="toggle--sign no--desktop">
     <div class="shop one active">{{t 'shop'}}</div>
-    {{#if logged_in }}
+    {{#if user_logged_in }}
       {{#if aura_enabled }}
         <div class="account--logged_in one" id="username-points-wrapper-mobile-menu"></div>
       {{else}}
@@ -28,7 +28,7 @@
           (eq menu_type 'default')
           (eq menu_type 'menu_dynamic_display')) }}
       {{#each menu_items as |item|}}
-        {{> main_menu_level1_items_partial menu_item=item menu_type=../menu_type foo='bar' }}
+        {{> main_menu_level1_items_partial menu_item=item menu_type=../menu_type promopanel_class=../promopanel_class }}
       {{/each}}
     {{else if (eq menu_type 'menu_inline_display') }}
       {{'// @todo implement menu_inline_display'}}
