--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level3-partial.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level3-partial.handlebars
@@ -3,13 +3,12 @@
   <div class="level-three__wrapper">
     <span class="back--link"><span class="menu__back"></span> <span>{{ name }}</span></span>
     {{#each items as |menu_item|}}
-      {{'// @todo implement level_class'}}
       <li class="menu__list-item menu--three__list-item {{ level_class }}">
         <div class="menu__link-wrapper menu-two__link-wrapper">
           <{{@root.tag}} class="menu__link menu--three__link {{ level_class }}" style="{{@root.style}}" title="{{ menu_item.name }}" gtm-menu-title="{{ menu_item.name }}" href="{{ menu_item.url_path }}">{{ menu_item.name }}</{{@root.tag}}>
         </div>
         {{#if menu_item.children }}
-          {{> main_menu_level4_partial name=name items=item.children }}
+          {{> main_menu_level4_partial name=name items=item.children level_class=level_class }}
         {{/if}}
       </li>
     {{/each}}
