CORE-43471: Update contact details UI issues.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
@@ -76,6 +76,19 @@
     .mb-verifier {
       color: $hm-registration-labels-txt;
       padding-top: rem(16);
+
+      .verified-msg {
+        color: $hm-opt-success !important;
+        display: flex;
+        margin-#{$left}: rem(-5);
+
+        @include icon(check) {
+          color: $hm-opt-success;
+          background: $hm-registration-fields-bg;
+          position: relative;
+          font-size: rem(24);
+        }
+      }
     }
 
     .hello-member-otp-popup-form {
