--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2309,6 +2309,7 @@ $hm-pdp-points-earned-txt: $cherry;
 $hm-opt-input-bg: $white-five;
 $hm-opt-input-border: $egift-gray;
 $hm-opt-input-focus-border: $mothercare-black;
+$hm-opt-success: $_spc-radio-filled;
 
 // Hello member loyalty SPC
 $hm-loyalty-labels-txt: $grey-light;
