CORE-43239: Added font color and weight to List View map marker, tweaked positioning (TBS).

--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/store-finder/component/_store-finder.scss
@@ -50,7 +50,13 @@
 .nodetype--store {
   .geolocation-google-map {
     [aria-hidden='true'] {
+      color: $store_finder_map_marker_text !important;
+      font-weight: bold;
       padding-bottom: 0;
+
+      html[lang='ar'] & {
+        padding-right: rem(1);
+      }
     }
   }
 }
