--- a/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/wishlist/component/_wishlist-icon.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/wishlist/component/_wishlist-icon.scss
@@ -2,3 +2,17 @@
   width: 2.5rem;
   height: 2.5rem;
 }
+
+#wishlist-header-wrapper {
+  .wishlist-icon {
+    background: url('#{$brand_theme_img_directory_path}/icons/wishlist-empty-icon-black.svg') no-repeat;
+    background-size: cover;
+  }
+
+  .wishlist-link.wishlist-active {
+    .wishlist-icon {
+      background: url('#{$brand_theme_img_directory_path}/icons/wishlist-filled-icon-black.svg') no-repeat;
+      background-size: cover;
+    }
+  }
+}
