--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
@@ -1,28 +1,34 @@
 {{! @see docroot/modules/custom/alshaya_main_menu/templates/alshaya-main-menu-level2.html.twig }}
 <ul class="menu__list menu--two__list">
   <div class="menu__links__wrapper">
+    <span class="back--link"><span class="menu__back"></span> <span>{{ name }}</span></span>
+    {{set 'sub_nav_name' name }}
     {{#if (or
           (eq @root.menu_type 'default')
           (eq @root.menu_type 'menu_dynamic_display')) }}
-      <span class="back--link"><span class="menu__back"></span> <span>{{ name }}</span></span>
-      {{set 'sub_nav_name' name }}
-      {{#each columns as |column col|}}
+      {{#each menu_items as |column col|}}
         <div class="column {{ col }}">
           {{#each column as |menu_item|}}
-            <li class="menu__list-item menu--two__list-item {{ level_class }} {{ move_to_right }}">
-              <div class="menu__link-wrapper menu-two__link-wrapper">
-                <{{@root.tag}} class="menu__link menu-two__link {{ level_class }} sub-nav-{{cleanCssIdentifier @root.sub_nav_name }}" gtm-menu-title="{{ menu_item.name }}" href="{{ @root.path_prefix }}{{ menu_item.url_path }}">{{ menu_item.name }}</{{@root.tag}}>
-              </div>
-              {{#if menu_item.children }}
-                {{> main_menu_level3_partial name=name items=menu_item.children level_class=level_class }}
-              {{/if}}
-            </li>
+            {{> menuItem }}
           {{/each}}
         </div>
       {{/each}}
     {{else if (eq @root.menu_type 'menu_inline_display') }}
-      {{'// @todo implement this'}}
+      {{#each menu_items as |menu_item|}}
+        {{> menuItem }}
+      {{/each}}
     {{/if}}
   </div>
   {{'// @todo implement this'}}
 </ul>
+
+{{#*inline "menuItem"}}
+  <li class="menu__list-item menu--two__list-item {{ level_class }} {{ move_to_right }}">
+    <div class="menu__link-wrapper menu-two__link-wrapper">
+      <{{@root.tag}} class="menu__link menu-two__link {{ level_class }} sub-nav-{{cleanCssIdentifier @root.sub_nav_name }}" gtm-menu-title="{{ this.name }}" href="{{ @root.path_prefix }}{{ this.url_path }}">{{ this.name }}</{{@root.tag}}>
+    </div>
+    {{#if this.children }}
+      {{> main_menu_level3_partial name=name items=this.children level_class=level_class }}
+    {{/if}}
+  </li>
+{{/inline}}
