--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level4-partial.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level4-partial.handlebars
@@ -1,7 +1,7 @@
 {{! @see docroot/modules/custom/alshaya_main_menu/templates/alshaya-main-menu-level4.html.twig }}
 <ul class="menu__list menu--four__list">
   <div class="level-four__wrapper">
-    <span class="back--link"><span class="menu__back"></span> <span>{{ data.label }}</span></span>
+    <span class="back--link"><span class="menu__back"></span> <span>{{ name }}</span></span>
     {{#each items as |menu_item|}}
       <li class="menu__list-item menu--four__list-item {{ level_class }}">
         <div class="menu__link-wrapper menu-two__link-wrapper">
