CORE-42824: AEO UAT | Cart icon is not aligned correctly with other elements in the header.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -16,4 +16,14 @@
       }
     }
   }
+
+  &:not(.frontpage) {
+    .branding__menu {
+      #block-alshayareactcartminicartblock {
+        @include breakpoint($upto-desktop) {
+          top: rem(65);
+        }
+      }
+    }
+  }
 }
