CORE-39361: Added ticket todo.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
@@ -19,7 +19,7 @@
       {{/each}}
     {{/if}}
   </div>
-  {{'// @todo implement this'}}
+  {{'// @todo CORE-43557: Implement Category image and menu highlights'}}
 </ul>
 
 {{#*inline "menuItem"}}
