CORE-42623: [Drupal - FE - Mobile] - Provide collapsable sticky CTA for BNPL payment option.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -408,6 +408,10 @@ $pdp_sell_title: $hnm-black-three;
 $pdp_mobile_wrapper: $default_background_color;
 $pdp_slick_dots_background: rgba(255, 255, 255, 0.3);
 $pdp_slick_dots_box_shadow: rgba(0, 0, 0, 0.3);
+$pdp_bnpl_open_lbl_background: $white-five;
+$pdp_bnpl_hide_lbl_text: $hnm-black-three;
+$pdp_bnpl_hide_lbl_background: $light_orange;
+$pdp_bnpl_grey_shadow: $hnm-black-two-50;
 
 // additional attribute
 $pdp_additional_attribute_text: $hnm-black-three;
