HEL-128: There should be underlined for Terms and Conditions and Privacy Policy in Sign In page.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/user/_user.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/user/_user.scss
@@ -175,6 +175,30 @@
   }
 }
 
+.c-content {
+  .c-content__region {
+    .user-login-form {
+      p {
+        font-size: rem(11);
+        color: $login_terms_cond;
+        margin-top: rem(26);
+
+        a {
+          color: $login_terms_cond;
+          font-family: $hnm-regular;
+          text-decoration: underline;
+          font-weight: normal;
+
+          &:hover {
+            color: $login_terms_hover;
+          }
+        }
+
+      }
+    }
+  }
+}
+
 #block-youllbeableto,
 #block-jointheclub {
   a {
