HEL-128: There should be underlined for Terms and Conditions and Privacy Policy in Sign In page.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/user/_user.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/user/_user.scss
@@ -180,20 +180,19 @@
     .user-login-form {
       p {
         font-size: rem(11);
-        color: $login_terms_cond;
+        color: $user_field_link;
         margin-top: rem(26);
 
         a {
-          color: $login_terms_cond;
+          color: $user_field_link;
           font-family: $hnm-regular;
           text-decoration: underline;
           font-weight: normal;
 
           &:hover {
-            color: $login_terms_hover;
+            color: $login_tnc_link_hover;
           }
         }
-
       }
     }
   }
