--- a/docroot/themes/custom/transac/alshaya_footlocker/sass/components/header/_header-three-level.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/sass/components/header/_header-three-level.scss
@@ -20,6 +20,7 @@
       .menu__link {
         font-size: 0.875rem !important;
         text-transform: capitalize;
+        line-height: rem(18);
       }
     }
   }
@@ -29,6 +30,18 @@
   li.menu--one__list-item {
     @include breakpoint($desktop) {
       vertical-align: middle;
+    }
+  }
+
+  .active--menu--links {
+    &:hover {
+      li.menu--one__list-item {
+        .menu--one__link {
+          @include breakpoint($desktop) {
+            border-bottom: none;
+          }
+        }
+      }
     }
   }
 }
