CORE-41951: Membership info link display on header / my account tabs / home page

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -867,3 +867,6 @@ $hm-benefit-Tnc-txt: $silver-chalice;
 $hm-pdp-points-earned-txt: $venetian_red;
 // hello member SPC
 $hm-accured-points-txt: $hnm-red;
+
+//hello member header block
+$hm-menu-link-txt: $hnm-black-two;
