CORE-43587: Update force loyalty popup content.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2272,6 +2272,7 @@ $online-return-confirmation-border: $_gray_222;
 $hm-membership-success-popup-bg: $white-five;
 $hm-membership-success-popup-title: $_spc-discount-text;
 $hm-content-link: $black-two;
+$hm-btn-hover: $egift-disabled-gray2;
 
 // Hello Member registration
 $hm-registration-accordion-bg: $whisper;
