--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-accounts-hello-member/component/_membership-success.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-accounts-hello-member/component/_membership-success.scss
@@ -3,8 +3,20 @@
     .hello-membership-info {
       .hello-membership- {
         &details {
-          p {
-            font-family: $hnm-demibold;
+          .hello-membership-sub-title {
+            font-family: $alshaya-thin;
+          }
+
+          .hello-membership-terms {
+            font-family: $alshaya-thin;
+          }
+
+          .hello-membership-continue {
+            a {
+              font-family: $hnm-demibold;
+              background-color: $primary_btn_bg;
+              color: $primary_btn_text;
+            }
           }
         }
       }
