--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_membership-success.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_membership-success.scss
@@ -6,7 +6,7 @@
     .hello-membership-info {
       padding: rem(48) rem(60);
 
-      @include breakpoint($only-mobile) {
+      @include breakpoint($upto-desktop) {
         padding: rem(40) rem(24);
       }
 
@@ -14,24 +14,52 @@
         &title {
           font-size: rem(32);
           margin-bottom: rem(24);
+          line-height: rem(32);
           color: $hm-membership-success-popup-title;
         }
 
         &details {
-          p {
+          .hello-membership-sub-title {
             font-family: $alshaya-bold;
             margin-bottom: rem(8);
+            font-size: rem(16);
+            letter-spacing: 0.2px;
+            line-height: 1.5;
 
-            & + p {
-              font-family: $alshaya-thin;
+            @include breakpoint($upto-desktop) {
               font-size: rem(14);
-              margin-top: 0;
             }
           }
 
-          @include breakpoint($only-mobile) {
-            font-size: rem(14);
-            padding: 0 rem(32);
+          .hello-membership-terms {
+            font-size: rem(12);
+            margin-top: 0;
+            text-align: #{$left};
+
+            @include breakpoint($upto-desktop) {
+              font-size: rem(11);
+            }
+          }
+
+          .hello-membership-continue {
+            text-align: center;
+            padding: rem(36) 0 rem(36) 0;
+
+            a {
+              @extend %button-wide;
+
+              cursor: pointer;
+              background-color: $primary_btn_bg;
+              color: $primary_btn_text;
+              font-size: rem(16);
+              text-align: center;
+              font-family: $alshaya-bold;
+              width: 75%;
+            }
+
+            a:hover {
+              background-color: $hm-btn-hover;
+            }
           }
         }
       }
@@ -40,7 +68,7 @@
 
   .hello_member_popup-content {
     padding: 0 !important;
-    width: 30% !important;
+    width: rem(484) !important;
     border: 0 !important;
 
     @include breakpoint($only-tablet) {
@@ -49,19 +77,6 @@
 
     @include breakpoint($only-mobile) {
       width: 95% !important;
-    }
-
-    .close-modal {
-      @include icon(close, after) {
-        font-weight: bold;
-      }
-
-      position: relative;
-      float: $right;
-      top: rem(18);
-      font-size: rem(16);
-      cursor: pointer;
-      #{$right}: rem(18);
     }
   }
 }
