--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_membership-success.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_membership-success.scss
@@ -10,6 +10,10 @@
         padding: rem(40) rem(24);
       }
 
+      a {
+        text-decoration: underline;
+      }
+
       .hello-membership- {
         &title {
           font-size: rem(32);
@@ -55,6 +59,7 @@
               text-align: center;
               font-family: $alshaya-bold;
               width: 75%;
+              text-decoration: none;
             }
 
             a:hover {
