CORE-43619: Sanity || H&M || Benefits section offer description text is not having proper text spacing.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/wishlist/component/_wishlist-header.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/wishlist/component/_wishlist-header.scss
@@ -30,4 +30,16 @@ body.wishlist-enabled {
       top: 0;
     }
   }
+
+  @include breakpoint($desktop) {
+    header {
+      .region__header {
+        .block-alshaya-react-mini-cart {
+          #mini-cart-wrapper {
+            min-width: max-content;
+          }
+        }
+      }
+    }
+  }
 }
