CORE-42939: Make accordions generally accessible.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/slider/_product-category-carousel.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/slider/_product-category-carousel.scss
@@ -108,7 +108,7 @@
   }
 }
 
-.c-accordion-delivery-option-parent {
+.c-accordion-delivery-option-parent.carousel-category-accordion {
   @include breakpoint($tablet) {
     display: none;
   }
