--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -156,6 +156,7 @@ $prussian_blue: #063971;
 $egift-button-hover: rgba(51, 51, 51, 0.1);
 $speech-red: #c00;
 $red-orange: #e6591b;
+$light-yellow: #f1ebdf;
 
 // Aura Colors & Gradients.
 $purple-glory: #7b1f84;
@@ -2293,6 +2294,15 @@ $hm-qr-code-bg: $white-three;
 // Hello Member benefit block
 $hm-my-offers-bg: $white-three;
 $hm-my-offers-expiry-txt: $grey-light;
+$hm-promo-pop-txt: $_sofa-section-grey2;
+$hm-promo-tab-title: $_gray_222;
+$hm-promo-tab-border: $warm-grey-two;
+$hm-promo-tab-items-bg: $white-smoke-light;
+$hm-promo-tab-items-border: $egift-gray;
+$hm-promo-btn-bg: $mothercare-black;
+$hm-promo-err-sec-bg: $light-yellow;
+$hm-promo-radio-btn: $mothercare-black;
+$hm-promo-sel-tab-border: rgba(0, 0, 0, 0.24);
 
 // Hello member history point
 $hm-history-points-light-title: $greyish;
